<resources>
    <string name="App_name">Recycled view exercise</string>
    <string name="Test_app">Test App</string>
    <string name="employee_age">Employee age:</string>
    <string name="employee_salary">Employee salary:</string>
    <string name="employee_name">Employee name:</string>
    <string name="relative_layout_employee_id">Employee id:</string>
    <string name="employee_image">Employee image:</string>
    <string name="Back">Back</string>
    <string name="todo">TODO</string>
    <string name="update">Update</string>
    <string name="confirm">Confirm</string>
    <string name="complete_the_data">Complete the data:</string>


    <string name="age">Age</string>
    <string name="delete">Delete Employee</string>
    <string name="app_name">SharedPreferencesFavorites</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="favorites">Favorites</string>
    <string name="create_new_employee">Create new Employee</string>
    <string name="name">Name</string>
    <string name="salary">Salary</string>

</resources>
