<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="editEmployee"
            type="com.example.recycledviewexercise.UpdateActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100"
        tools:context=".UpdateActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:text="@string/complete_the_data"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editSalary"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:ems="10"
            android:hint="@string/salary"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editAge"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="number" />

        <Button
            android:id="@+id/buttonConfirm"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/buttonDelete"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:text="@string/delete" />

        <Button
            android:id="@+id/button_back_to_the_profile"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:text="@string/Back" />

    </LinearLayout>
</layout>