<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="new_employee"
            type="com.example.recycledviewexercise.addNewEmployee.AddEmployeeActivity"/>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="95"
        tools:context=".addNewEmployee.AddEmployeeActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:text="@string/create_new_employee"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/newName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text" />

        <EditText
            android:id="@+id/newSalary"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:ems="10"
            android:hint="@string/salary"
            android:inputType="numberDecimal" />


        <EditText
            android:id="@+id/newAge"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="number" />


        <Button
            android:id="@+id/buttonNewEmployeeConfirm"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/buttonBackToMain"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:text="@string/Back" />


    </LinearLayout>
</layout>