<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="employee"
            type="com.example.recycledviewexercise.Employee" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <ImageView
            android:id="@+id/anonymousPic"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:contentDescription="@string/todo"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/bean" />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7.5"
            android:text="@{`Id: ` + String.valueOf(employee.id)}"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/profile_activity_text_size" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7.5"
            android:text="@{`Name: ` + employee.name}"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/profile_activity_text_size" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7.5"
            android:text="@{`Salary: `+ String.valueOf(employee.salary)}"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/profile_activity_text_size" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7.5"
            android:text="@{`Age: ` + String.valueOf(employee.age)}"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/profile_activity_text_size" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonUpdate"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="10"
            android:text="@string/update"
            android:textAllCaps="false" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonBack"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="10"
            android:text="@string/Back"
            android:textAllCaps="false" />

    </LinearLayout>

</layout>